--- a/tables.html
+++ b/tables.html
@@ -14,17 +14,19 @@
 
     <div class="jumbotron text-center">
         <h1 class="display-4 bold">Hot Restaurant</h1>
-        <h2>Book your table before they are all gone!</h2>
+        <h2>Current Reservations and Waiting List</h2>
         <p class="lead"></p>
         <hr class="my-4">
         <p></p>
         <div class="justify-content-center">
-        <a class="btn btn-primary btn-lg" href="tables.html" role="button">View Tables</a>
-        <a class="btn btn-danger btn-lg" href="#" role="button">Make a reservation</a>
-        </div>
+        <a class="btn btn-danger btn-lg" href="#" role="button">View tables</a>
+        <button type="button" class="btn btn-lg-dark" href="index.html">Home</button>
+    </div>
       </div>
 
-    
+    <div class="row">
+        <div></div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
