--- a/reservation.html
+++ b/reservation.html
@@ -14,12 +14,12 @@
 
     <div class="jumbotron text-center">
         <h1 class="display-4 bold">Hot Restaurant</h1>
-        <h2>Current Reservations and Waiting List</h2>
+        <h2>Make your reservation</h2>
         <p class="lead"></p>
         <hr class="my-4">
         <p></p>
         <div class="justify-content-center">
-        <a class="btn btn-danger btn-lg" href="reservation.html" role="button">Make a reservation</a>
+        <a class="btn btn-danger btn-lg" href="tables.html" role="button">View Tables</a>
         <button type="button" class="btn btn-lg-dark" href="index.html">Home</button>
     </div>
       </div>
