--- a/reservation.html
+++ b/reservation.html
@@ -24,9 +24,31 @@
     </div>
       </div>
 
-    <div class="row">
-        <div></div>
-    </div>
+      <form class= "m-4">
+
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="">
+        </div>
+
+        <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input type="text" class="form-control" id="phone" placeholder="">
+          </div>
+
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        </div>
+
+        <div class="form-group">
+            <label for="id">Unique ID</label>
+            <input type="text" class="form-control" id="id" placeholder="">
+          </div>
+
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
