--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p></p>
         <div class="justify-content-center">
         <a class="btn btn-primary btn-lg" href="tables.html" role="button">View Tables</a>
-        <a class="btn btn-danger btn-lg" href="#" role="button">Make a reservation</a>
+        <a class="btn btn-danger btn-lg" href="reservation.html" role="button">Make a reservation</a>
         </div>
       </div>
 
